--- a/index.html
+++ b/index.html
@@ -107,14 +107,15 @@
                                 <span class="mt-4 text-primary-blue font-semibold group-hover:text-secondary-accent flex items-center justify-start">Go to Library &rarr;</span>
                             </a>
 
-                            <!-- Feature Card 2: Draw (Placeholder - Requires its own file) -->
-                            <div class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 opacity-60">
-                                <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-secondary-accent text-white">
+                            <!-- Feature Card 2: Draw -->
+                            <a href="YOUR_LINK_HERE" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                                <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-secondary-accent text-white group-hover:bg-indigo-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 21.5l.5-1.5h-1L12 21.5zm-6-6l-1.5-1.5 6-6 6 6-1.5 1.5zm-4-4l-1.5-1.5 4-4 4 4-1.5 1.5zM15 12l-3-3m3 3h3v3l-3 3" /><path stroke-linecap="round" stroke-linejoin="round" d="M7 17l-4 4m0 0l4-4m-4 4h4v-4" /></svg>
                                 </div></div>
-                                <h3 class="mt-4 text-xl font-bold text-gray-900">Draw (Coming Soon)</h3>
-                                <p class="mt-2 text-base text-gray-500 flex-grow">Grab a digital brush and let your imagination run wild. (Requires dedicated file)</p>
-                            </div>
+                                <h3 class="mt-4 text-xl font-bold text-gray-900">Draw</h3>
+                                <p class="mt-2 text-base text-gray-500 flex-grow">Grab a digital brush and let your imagination run wild.</p>
+                                <span class="mt-4 text-secondary-accent font-semibold group-hover:text-primary-blue flex items-center justify-start">Start Drawing &rarr;</span>
+                            </a>
 
                             <!-- Feature Card 3: Play Games -->
                             <a href="games.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
