--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="mt-20">
                         <div class="grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-4">
                             <!-- Feature Card 1: Read -->
-                            <a href="https://halleybearyoung-coder.github.io/Funz.com/" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                            <a href="Digital Libary.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
                                 <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-primary-blue text-white group-hover:bg-blue-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5s3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18s-3.332.477-4.5 1.253" /></svg>
                                 </div></div>
