--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div class="mt-20">
                         <div class="grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-4">
                             <!-- Feature Card 1: Read -->
-                            <a href="https://halleybearyoung-coder.github.io/Funz.com/library.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                            <a href="reading.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
                                 <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-primary-blue text-white group-hover:bg-blue-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5s3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18s-3.332.477-4.5 1.253" /></svg>
                                 </div></div>
@@ -108,7 +108,7 @@
                             </a>
 
                             <!-- Feature Card 2: Draw -->
-                            <a href="YOUR_LINK_HERE" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                            <a href="drawing.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
                                 <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-secondary-accent text-white group-hover:bg-indigo-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 21.5l.5-1.5h-1L12 21.5zm-6-6l-1.5-1.5 6-6 6 6-1.5 1.5zm-4-4l-1.5-1.5 4-4 4 4-1.5 1.5zM15 12l-3-3m3 3h3v3l-3 3" /><path stroke-linecap="round" stroke-linejoin="round" d="M7 17l-4 4m0 0l4-4m-4 4h4v-4" /></svg>
                                 </div></div>
@@ -118,7 +118,7 @@
                             </a>
 
                             <!-- Feature Card 3: Play Games -->
-                            <a href="https://halleybearyoung-coder.github.io/Funz.com/" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                            <a href="games.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
                                 <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-tertiary-accent text-white group-hover:bg-cyan-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                                 </div></div>
