Fix links to library.html in navigation and sections

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <!-- Desktop Navigation Links -->
                 <nav class="hidden md:flex space-x-8">
                     <a href="index.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium font-bold">Home</a>
-                    <a href="reading.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Read (Library)</a>
+                    <a href="libary.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Read (Library)</a>
                     <a href="games.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Play Games</a>
                     <a href="#about" class="hover:text-secondary-accent transition duration-150 ease-in-out font-medium">About</a>
                 </nav>
 
-                <!-- Mobile Menu Button -->
+                <!-- Mobile Menu Button - ->
                 <button id="mobile-menu-button" class="md:hidden p-2 rounded-md text-gray-600 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-primary-blue">
                     <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
                 </button>
@@ -56,7 +56,7 @@
         <div id="mobile-menu" class="hidden md:hidden bg-white border-t border-gray-200">
             <nav class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="index.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Home</a>
-                <a href="reading.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Read (Library)</a>
+                <a href="library.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Read (Library)</a>
                 <a href="games.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Play Games</a>
                 <a href="#about" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">About</a>
             </nav>
@@ -78,7 +78,7 @@
                         <a href="#features" class="inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-xl shadow-md text-white bg-secondary-accent hover:bg-indigo-700 transform hover:scale-105 transition duration-300 ease-in-out">
                             Start the Fun
                         </a>
-                        <a href="reading.html" class="inline-flex items-center justify-center px-6 py-3 border-2 border-primary-blue text-base font-medium rounded-xl text-primary-blue bg-white hover:bg-primary-blue hover:text-white transform hover:scale-105 transition duration-300 ease-in-out">
+                        <a href="library.html" class="inline-flex items-center justify-center px-6 py-3 border-2 border-primary-blue text-base font-medium rounded-xl text-primary-blue bg-white hover:bg-primary-blue hover:text-white transform hover:scale-105 transition duration-300 ease-in-out">
                             Visit the Library
                         </a>
                     </div>
@@ -98,7 +98,7 @@
                     <div class="mt-20">
                         <div class="grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-4">
                             <!-- Feature Card 1: Read -->
-                            <a href="reading.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                            <a href="library.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
                                 <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-primary-blue text-white group-hover:bg-blue-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5s3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18s-3.332.477-4.5 1.253" /></svg>
                                 </div></div>
