--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <nav class="hidden md:flex space-x-8">
                     <a href="index.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium font-bold">Home</a>
                     <a href="libary.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Read (Library)</a>
-                    <a href="games.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Play Games</a>
+                    <a href="arcade.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Play Games</a>
                     <a href="#about" class="hover:text-secondary-accent transition duration-150 ease-in-out font-medium">About</a>
                 </nav>
 
@@ -57,7 +57,7 @@
             <nav class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="index.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Home</a>
                 <a href="library.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Read (Library)</a>
-                <a href="games.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Play Games</a>
+                <a href="arcade.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Play Games</a>
                 <a href="#about" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">About</a>
             </nav>
         </div>
@@ -118,7 +118,7 @@
                             </a>
 
                             <!-- Feature Card 3: Play Games -->
-                            <a href="games.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                            <a href="arcade.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
                                 <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-tertiary-accent text-white group-hover:bg-cyan-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                                 </div></div>
