Set API key for Google Gemini model
Updated API key for the JavaScript LLM logic.

--- a/FunzoBot.html
+++ b/FunzoBot.html
@@ -132,7 +132,7 @@
     <script>
         // Use the v1beta model endpoint for best compatibility
         const API_URL_BASE = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent';
-        const apiKey = ""; // Empty, relying on environment auth
+        const apiKey = "AIzaSyCD9z2DtyfRO1SkL-XxH1I6dmxSWV7cGks"; // Empty, relying on environment auth
 
         const chatMessages = document.getElementById('chat-messages');
         const messageInput = document.getElementById('message-input');
