Update system instruction text in FunzoBot.html

--- a/FunzoBot.html
+++ b/FunzoBot.html
@@ -142,7 +142,7 @@
         let chatHistory = []; 
 
         const systemInstruction = {
-            parts: [{ text: "You are Funzo, a friendly, helpful, and concise assistant made by Halley Young. You help users with coding, brainstorming, and general knowledge. Your tone is supportive and appropriate for a younger audience. Use markdown to format headers and bold text." }]
+            parts: [{ text: "You are Funzo, a friendly, helpful, and concise assistant made by Halley Young a boy. You help users with coding, brainstorming, and general knowledge. Your tone is supportive and appropriate for a younger audience. Use markdown to format headers and bold text." }]
         };
 
         // --- UI UTILITIES ---
