--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         .app-section {
             min-height: 80vh;
         }
+        /* New style to ensure the logo components align properly */
+        .logo-text {
+            display: inline-flex;
+            align-items: center;
+            line-height: 1; /* Helps ensure text baseline matches */
+        }
     </style>
 </head>
 <body class="font-sans text-gray-800 bg-white">
@@ -35,17 +41,23 @@
     <header class="sticky top-0 z-50 bg-white shadow-lg">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
-                <a href="index.html" class="text-3xl font-extrabold text-primary-blue tracking-tight">Funz.com</a>
+                <a href="index.html" class="text-3xl font-extrabold text-primary-blue tracking-tight logo-text">
+                    <!-- Updated Logo Styling: using text-blue-400 for the lighter shade -->
+                    <span class="text-blue-400">F</span>
+                    <span class="text-primary-blue">unz</span>
+                    <span class="text-blue-400">.com</span>
+                </a>
 
                 <!-- Desktop Navigation Links -->
-                <nav class="hidden md:flex space-x-8">
+                <nav class="hidden md:flex items-center space-x-4">
                     <a href="index.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium font-bold">Home</a>
-                    <a href="libary.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Read (Library)</a>
+                    <a href="library.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Read (Library)</a>
                     <a href="arcade.html" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">Play Games</a>
-                    <a href="#about" class="hover:text-secondary-accent transition duration-150 ease-in-out font-medium">About</a>
+                    <a href="FunzoBot.html" class="text-white bg-tertiary-accent px-3 py-1 rounded-lg font-medium hover:bg-cyan-600 transition">Chat Bot</a>
+                    <a href="#about" class="text-gray-600 hover:text-secondary-accent transition duration-150 ease-in-out font-medium">About</a>
                 </nav>
 
-                <!-- Mobile Menu Button - ->
+                <!-- Mobile Menu Button -->
                 <button id="mobile-menu-button" class="md:hidden p-2 rounded-md text-gray-600 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-primary-blue">
                     <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
                 </button>
@@ -58,6 +70,7 @@
                 <a href="index.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Home</a>
                 <a href="library.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Read (Library)</a>
                 <a href="arcade.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">Play Games</a>
+                <a href="FunzoBot.html" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-white bg-tertiary-accent hover:bg-cyan-600">Chat Bot</a>
                 <a href="#about" class="w-full text-left block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50 hover:text-secondary-accent">About</a>
             </nav>
         </div>
@@ -78,7 +91,10 @@
                         <a href="#features" class="inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-xl shadow-md text-white bg-secondary-accent hover:bg-indigo-700 transform hover:scale-105 transition duration-300 ease-in-out">
                             Start the Fun
                         </a>
-                        <a href="library.html" class="inline-flex items-center justify-center px-6 py-3 border-2 border-primary-blue text-base font-medium rounded-xl text-primary-blue bg-white hover:bg-primary-blue hover:text-white transform hover:scale-105 transition duration-300 ease-in-out">
+                        <a href="language_bot.html" class="inline-flex items-center justify-center px-6 py-3 border-2 border-tertiary-accent text-base font-medium rounded-xl text-white bg-tertiary-accent hover:bg-cyan-600 transform hover:scale-105 transition duration-300 ease-in-out">
+                            Chat with Funzo Bot
+                        </a>
+                        <a href="reading.html" class="inline-flex items-center justify-center px-6 py-3 border-2 border-primary-blue text-base font-medium rounded-xl text-primary-blue bg-white hover:bg-primary-blue hover:text-white transform hover:scale-105 transition duration-300 ease-in-out">
                             Visit the Library
                         </a>
                     </div>
@@ -98,7 +114,7 @@
                     <div class="mt-20">
                         <div class="grid grid-cols-1 gap-10 sm:grid-cols-2 lg:grid-cols-4">
                             <!-- Feature Card 1: Read -->
-                            <a href="library.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                            <a href="reading.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
                                 <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-primary-blue text-white group-hover:bg-blue-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5s3.332.477 4.5 1.253v13C19.832 18.477 18.246 18 16.5 18s-3.332.477-4.5 1.253" /></svg>
                                 </div></div>
@@ -118,7 +134,7 @@
                             </a>
 
                             <!-- Feature Card 3: Play Games -->
-                            <a href="arcade.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                            <a href="games.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
                                 <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-tertiary-accent text-white group-hover:bg-cyan-700">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
                                 </div></div>
@@ -126,15 +142,16 @@
                                 <p class="mt-2 text-base text-gray-500 flex-grow">Quick, fun, and challenging mini-games like Tic-Tac-Toe and Memory Match.</p>
                                 <span class="mt-4 text-tertiary-accent font-semibold group-hover:text-primary-blue flex items-center justify-start">Go to Arcade &rarr;</span>
                             </a>
-
-                            <!-- Feature Card 4: Have Fun -->
-                            <div class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 opacity-60">
-                                <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-primary-blue text-white">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M14.828 14.828a4 4 0 01-5.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" /></svg>
+                            
+                            <!-- Feature Card 4: Chat with AI -->
+                            <a href="language_bot.html" class="flex flex-col p-6 bg-gray-50 rounded-2xl shadow-xl hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-1 group">
+                                <div class="flex-shrink-0"><div class="h-12 w-12 flex items-center justify-center rounded-full bg-primary-blue text-white group-hover:bg-blue-700">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z" /></svg>
                                 </div></div>
-                                <h3 class="mt-4 text-xl font-bold text-gray-900">Have Fun (Extras)</h3>
-                                <p class="mt-2 text-base text-gray-500 flex-grow">A placeholder for future content and fun experiments!</p>
-                            </div>
+                                <h3 class="mt-4 text-xl font-bold text-gray-900">Funzo Bot</h3>
+                                <p class="mt-2 text-base text-gray-500 flex-grow">Your expert assistant for coding, answers, and creative brainstorming.</p>
+                                <span class="mt-4 text-primary-blue font-semibold group-hover:text-secondary-accent flex items-center justify-start">Start Chatting &rarr;</span>
+                            </a>
 
                         </div>
                     </div>
@@ -155,10 +172,8 @@
         document.addEventListener('DOMContentLoaded', () => {
             const mobileMenuButton = document.getElementById('mobile-menu-button');
             const mobileMenu = document.getElementById('mobile-menu');
-            if (mobileMenuButton && mobileMenu) {
-                mobileMenuButton.addEventListener('click', () => {
-                    mobileMenu.classList.toggle('hidden');
-                });
+            if(mobileMenuButton && mobileMenu) {
+                mobileMenuButton.addEventListener('click', () => mobileMenu.classList.toggle('hidden'));
             }
         });
     </script>
