--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                         <a href="#features" class="inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-xl shadow-md text-white bg-secondary-accent hover:bg-indigo-700 transform hover:scale-105 transition duration-300 ease-in-out">
                             Start the Fun
                         </a>
-                        <a href="language_bot.html" class="inline-flex items-center justify-center px-6 py-3 border-2 border-tertiary-accent text-base font-medium rounded-xl text-white bg-tertiary-accent hover:bg-cyan-600 transform hover:scale-105 transition duration-300 ease-in-out">
-                            Chat with Funzo Bot
+                        <a href="FunzoBot.html" class="inline-flex items-center justify-center px-6 py-3 border-2 border-tertiary-accent text-base font-medium rounded-xl text-white bg-tertiary-accent hover:bg-cyan-600 transform hover:scale-105 transition duration-300 ease-in-out">
+                            Chat with Funzo Bot (NEW!)
                         </a>
                         <a href="reading.html" class="inline-flex items-center justify-center px-6 py-3 border-2 border-primary-blue text-base font-medium rounded-xl text-primary-blue bg-white hover:bg-primary-blue hover:text-white transform hover:scale-105 transition duration-300 ease-in-out">
                             Visit the Library
