Update API key in FunzoBot.html
Updated API key for the JavaScript LLM logic.

--- a/FunzoBot.html
+++ b/FunzoBot.html
@@ -131,7 +131,7 @@
     <script>
         // --- CONFIG & API ---
         const API_URL_BASE = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent';
-        const apiKey = ""; 
+        const apiKey = "AIzaSyCD9z2DtyfRO1SkL-XxH1I6dmxSWV7cGks"; 
 
         // CRITICAL FIX: Global DOM References (Assigned immediately)
         const chatMessages = document.getElementById('chat-messages');
