--- a/FunzoBot.html
+++ b/FunzoBot.html
@@ -144,7 +144,7 @@
         // 3. WARNING: Placing your key directly in this file is highly insecure!
         const apiKey = "AIzaSyDIaVqaqzLFoT89S8WJSUKuzeyNJoRr6UI"; 
         // Example of where you must place your new key for public deployment:
-        // const apiKey = "";
+        // const apiKey = "AIzaSyDIaVqaqzLFoT89S8WJSUKuzeyNJoRr6UI";
 
 
         // Global DOM element references
